# LLM-Lab-Sim

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  LLM Lab.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml
apps/api/: .dockerignore  .env.example  Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_init_schema.py  0002_add_share_tokens.py
apps/api/app/: config.py  database.py  dependencies.py  main.py  rate_limit.py  redis.py
apps/api/app/engine/: benchmarks.py  core.py  costs.py  curves.py  presets.py  scoring.py  warnings.py
apps/api/app/models/: __init__.py  dataset.py  model_config.py  project.py  share.py  simulation.py  user.py
apps/api/app/routers/: auth.py  datasets.py  model_config.py  projects.py  share.py  simulation.py
apps/api/app/schemas/: project.py
apps/api/tests/test_engine/: test_benchmarks.py  test_core.py  test_warnings.py
apps/web/: Dockerfile  package.json  pnpm-lock.yaml
apps/web/messages/: en.json  tr.json
apps/web/src/: proxy.ts
apps/web/src/app/: globals.css
apps/web/src/app/[locale]/: error.tsx  layout.tsx  not-found.tsx  page.tsx
apps/web/src/components/landing/: hero-background.tsx
apps/web/src/components/layout/: app-header.tsx  locale-switcher.tsx  project-loader.tsx  (+4 more)
apps/web/src/hooks/: use-chart-colors.ts
apps/web/src/i18n/: request.ts  routing.ts
apps/web/src/lib/: anonymous-id.ts  api-client.ts  demo-mode.ts  scoring-preview.ts
apps/web/src/stores/: project-store.ts
apps/web/src/types/: project.ts
(+25 files in other folders)
